--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <script src="js/script.js"></script>
+    <script src="js/script3.js"></script>
 </body>
 </html>
